--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
 
         <script
 			  src="javascript/jquery.js"></script>
-
-
         <link rel="stylesheet" href="styles/style.css">
 	</head>
 	<body>
@@ -19,7 +17,7 @@
 					<li class="nav-item">
 						<a class="nav-link" href="#">About</a>
 					</li>
-					<button class="btn btn-primary" href="#">Get Started</button>
+					<button class="btn btn-primary ml-md-3" href="#">Get Started</button>
 				</ul>
 			</div>
 		</nav>
@@ -31,11 +29,11 @@
 					<div class="row mb-5">
 						<div class="col-md">
 							<!-- <span class="text-white text-uppercase tracked">Local Ground</span> -->
-							<H1 class="text-white font-weight-bold">Tell your community's story</H1>
-							<p class="text-white">Local Ground is a free, open source online mapping tool that elevates community voices into compelling, digital stories.</p>
-							<p class="text-white mb-5">Transform data into multimedia-rich maps to advocate for ideas, solve problems, and create change.</p>
+							<H1 class="text-white font-weight-bold">Tell Your Community's Story</H1>
+							<p class="text-white mb-5">Local Ground is a free, open source online mapping tool that elevates community voices into compelling, digital stories.</p>
+<!-- 							<p class="text-white mb-5">Transform data into multimedia-rich maps to advocate for ideas, solve problems, and create change.</p> -->
 							<p class="text-white">Do you have a story to tell?</p>
-							<button type="button"  class="btn btn-outline-light">Get Started Now</button>
+							<button type="button"  class="btn btn-primary">Get Started</button>
 						</div>
 						<div class="col-sm d-none d-xl-block">
 							<img class="img-fluid" src="assets/garden-pin.png">
@@ -49,20 +47,11 @@
 
 			<section id="make-maps" class="bg-white map-background map-bg">
 				<div class="container">
-<!-- 					<div  class="text-center">
-						<img class="img-fluid" style="max-height:200px;margin-bottom:-50px" src="assets/map-pins.png">
-					</div> -->
 					<div class="row mb-5">
-<!-- 						<div class="col-lg">
-							<img class="img-fluid map-pins" style="max-height:200px;" src="assets/map-pins.svg">
-						</div> -->
 						<div class="col-lg">
 							<h2 class="text-center font-weight-bold">Make Maps</h2>
 							<p class="text-center">Create story maps that take your visitor on a journey through your data</p>
 						</div>
-<!-- 						<div class="col-lg">
-							<img class="img-fluid map-pins" style="max-height:200px;  -webkit-transform: scaleX(-1);transform: scaleX(-1);" src="assets/map-pins.svg">
-						</div> -->
 					</div>
 					<div class="row pt-5">
 						<div class="col-md">
@@ -135,14 +124,14 @@
 					<div class="row mb-5">
 						<div class="col-sm">
 							<h2 class="text-center font-weight-bold ">Share</h2>
-							<p class="text-center">Publish your maps to a select group OR to the whole world</p>
+							<p class="text-center">Publish your maps to a select group or to the whole world</p>
 						</div>
 					</div>
 					<div class="row pt-5">
 						<div class="col-sm">
 							<div class="animation-element bounce-up text-center" style="max-width:400px;margin:auto;">
 								<img style="position:relative;z-index:3;top:0;left:0;" class="img-fluid" alt="laptop with map being built on it" src="assets/map.png">
-								<img style="position:absolute;z-index:2;top:0;left:0;left:0;right:0;margin:auto;" class="img-fluid animation-element bounce-up" alt="laptop with map being built on it" src="assets/arrows.png">				
+								<img class="img-fluid animation-element bounce-up layered-img" alt="laptop with map being built on it" src="assets/arrows.png">				
 								<img style="position:absolute;z-index:4;top:0;left:0;left:0;right:0;margin:auto;" class="img-fluid animation-element bounce-down" alt="laptop with map being built on it" src="assets/lock.png">					
 							</div>
 						</div>
@@ -154,7 +143,7 @@
 								</li>
 								<li class="list-group-item">
 									<h3>Decide who can see the map </h3>
-									<span>Decide who can see the map - You have the option of requiring a password to view your map.</span>
+									<span>You have the option of requiring a password to view your map.</span>
 								</li>
 							</ul>
 						</div>
