--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
 						<div class="col-sm d-none d-xl-block">
 							<img class="img-fluid" src="assets/garden-pin.png">
 						</div>
+						<div class="col-sm d-none d-xl-block">
+						</div>
 					</div>
 				</div>
 			</section>
@@ -56,10 +58,11 @@
 					<div class="row pt-5">
 						<div class="col-md">
 							<div class="animation-element bounce-up">
-								<img class="img-fluid" alt="laptop with map being built on it" src="assets/laptop-imgs/laptop.png">
-								<img style="position:absolute;left:0;top:0;" class="img-fluid animation-element fade-in" alt="laptop with map being built on it" src="assets/laptop-imgs/map.png">
-								<img style="position:absolute;left:0;top:0;" class="img-fluid animation-element bounce-down" alt="laptop with map being built on it" src="assets/laptop-imgs/overlay.png"><img style="position:absolute;left:0;top:0;" class="img-fluid animation-element bounce-down" alt="laptop with map being built on it" src="assets/laptop-imgs/data-points.svg">		
-								<img style="position:absolute;left:0;top:0;" class="img-fluid animation-element bounce-down" alt="laptop with map being built on it" src="assets/laptop-imgs/picture.png">
+								<img class="img-fluid img-bottom-la" alt="laptop with map being built on it" src="assets/laptop-imgs/laptop.png">
+								<img class="img-fluid animation-element fade-in img-layer" alt="laptop with map being built on it" src="assets/laptop-imgs/map.png">
+								<img class="img-fluid animation-element bounce-down img-layer" alt="laptop with map being built on it" src="assets/laptop-imgs/overlay.png">
+								<img class="img-fluid animation-element bounce-down img-layer" alt="laptop with map being built on it" src="assets/laptop-imgs/data-points.svg">		
+								<img class="img-fluid animation-element bounce-down img-layer" alt="laptop with map being built on it" src="assets/laptop-imgs/picture.png">
 							</div>
 						</div>
 						<div class="col-md">
@@ -131,9 +134,9 @@
 					<div class="row pt-5">
 						<div class="col-sm">
 							<div class="animation-element bounce-up text-center" style="max-width:400px;margin:auto;">
-								<img style="position:relative;z-index:3;top:0;left:0;" class="img-fluid" alt="laptop with map being built on it" src="assets/map.png">
-								<img class="img-fluid animation-element bounce-up layered-img" alt="laptop with map being built on it" src="assets/arrows.png">				
-								<img style="position:absolute;z-index:4;top:0;left:0;left:0;right:0;margin:auto;" class="img-fluid animation-element bounce-down" alt="laptop with map being built on it" src="assets/lock.png">					
+								<img class="img-fluid img-bottom-layer" alt="laptop with map being built on it" src="assets/map.png">
+								<img class="img-fluid animation-element bounce-up img-layer" alt="laptop with map being built on it" src="assets/arrows.png">				
+								<img class="img-fluid animation-element bounce-down img-layer" alt="laptop with map being built on it" src="assets/lock.png">					
 							</div>
 						</div>
 						<div class="col-sm">
