--- a/index.html
+++ b/index.html
@@ -43,9 +43,25 @@
 					</div>
 				</div>
 			</section>
-<!-- 			<section>
-				TODO:Add summary
-			</section> -->
+
+			<section class="bg-light">
+				<div class="container">
+					<div class="row">
+						<div class="col-md">
+							<img class="img-fluid" src="assets/summary/collect-data.png">
+							<h4>Collect location data with your team</h4>
+						</div>
+						<div class="col-md">
+							<img class="img-fluid" src="assets/summary/personalize-data.png">
+							<h4>Mix visualizations, images, and drawings</h4>
+						</div>
+						<div class="col-md">
+							<img class="img-fluid" src="assets/summary/tell-stories.png">
+							<h4>Advocate for ideas, solve problems, and create change</h4>
+						</div>
+					</div>
+				</div>
+			</section>
 
 			<section id="make-maps" class="bg-white map-background map-bg">
 				<div class="container">
