--- a/index.html
+++ b/index.html
@@ -28,11 +28,9 @@
 				<div class="container">
 					<div class="row mb-5">
 						<div class="col-md">
-							<!-- <span class="text-white text-uppercase tracked">Local Ground</span> -->
 							<H1 class="text-white font-weight-bold">Tell Your Community's Story</H1>
-							<p class="text-white mb-5">Local Ground is a free, open source online mapping tool that elevates community voices into compelling, digital stories.</p>
-<!-- 							<p class="text-white mb-5">Transform data into multimedia-rich maps to advocate for ideas, solve problems, and create change.</p> -->
-							<p class="text-white">Do you have a story to tell?</p>
+							<p class="text-white mb-4 font-weight-bold">Local Ground is a free, open source online mapping tool that elevates community voices into compelling, digital stories.</p>
+							<p class="text-white font-weight-bold">Do you have a story to tell?</p>
 							<button type="button"  class="btn btn-primary">Get Started</button>
 						</div>
 						<div class="col-sm d-none d-xl-block">
@@ -45,18 +43,23 @@
 
 			<section class="bg-light">
 				<div class="container">
+					<div class="row mb-4">
+						<div class="col-lg">
+							<h2 class="text-center font-weight-bold">Think with Maps</h2>
+						</div>
+					</div>
 					<div class="row">
 						<div class="col-md">
 							<img class="img-fluid" src="assets/summary/collect-data.png">
-							<h4>Collect location data with your team</h4>
+							<p class="text-center">Collect location data with your team</p>
 						</div>
 						<div class="col-md">
 							<img class="img-fluid" src="assets/summary/personalize-data.png">
-							<h4>Mix visualizations, images, and drawings</h4>
+							<p class="text-center">Layer visualizations, images, and drawings to tell a story</p>
 						</div>
 						<div class="col-md">
 							<img class="img-fluid" src="assets/summary/tell-stories.png">
-							<h4>Advocate for ideas, solve problems, and create change</h4>
+							<p class="text-center">Use your map to advocate for ideas, solve problems, and create change</>
 						</div>
 					</div>
 				</div>
@@ -64,10 +67,10 @@
 
 			<section id="make-maps" class="bg-white map-background map-bg">
 				<div class="container">
-					<div class="row mb-5">
+					<div class="row mb-4">
 						<div class="col-lg">
 							<h2 class="text-center font-weight-bold">Make Maps</h2>
-							<p class="text-center">Create story maps that take your visitor on a journey through your data</p>
+							<p class="text-center font-weight-bold">Create story maps that take your visitor on a journey through your data</p>
 						</div>
 					</div>
 					<div class="row pt-5">
@@ -109,7 +112,7 @@
 					<div class="row mb-5">
 						<div class="col-sm">
 							<h2 class="text-center font-weight-bold">Collaborate</h2>
-							<p class="text-center">Invite others to participate in your project</p>
+							<p class="text-center font-weight-bold">Invite others to participate in your project</p>
 						</div>
 					</div>
 					<div class="row pt-5">
@@ -130,8 +133,9 @@
 							</ul>
 						</div>
 						<div class="col-sm">
-							<div class="animation-element bounce-up">
-								<img class="img-fluid" alt="Children and a teenager taking photos with a map in the background" src="assets/collaboration.png">
+							<div class="animation-element bounce-up lock-map-animation">
+								<img class="img-fluid animation-element bounce-up rounded" alt="laptop with map being built on it" src="assets/collaboration-01.png">
+								<img class="img-fluid animation-element bounce-up rounded" alt="laptop with map being built on it" src="assets/collaboration-02.png">	
 							</div>
 						</div>
 					</div>
@@ -143,12 +147,12 @@
 					<div class="row mb-5">
 						<div class="col-sm">
 							<h2 class="text-center font-weight-bold ">Share</h2>
-							<p class="text-center">Publish your maps to a select group or to the whole world</p>
+							<p class="text-center font-weight-bold">Publish your maps to a select group or to the whole world</p>
 						</div>
 					</div>
 					<div class="row pt-5">
 						<div class="col-sm">
-							<div class="animation-element bounce-up text-center" style="max-width:400px;margin:auto;">
+							<div class="animation-element bounce-up text-center lock-map-animation">
 								<img class="img-fluid img-bottom-layer" alt="laptop with map being built on it" src="assets/map.png">
 								<img class="img-fluid animation-element bounce-up img-layer" alt="laptop with map being built on it" src="assets/arrows.png">				
 								<img class="img-fluid animation-element bounce-down img-layer" alt="laptop with map being built on it" src="assets/lock.png">					
@@ -174,8 +178,8 @@
 					<h2 class="text-center text-white font-weight-bold">Get Started Now</h2>
 					<div class="row pt-5 pb-5">
 						<div class="col">
-							<button class="btn btn-outline-light">Create a Map</button>
-							<button class="btn btn-outline-light">Explore Maps</button>
+							<button class="btn btn-primary">Create a Map</button>
+							<button class="btn btn-primary">Explore Maps</button>
 						</div>
 					</div>
 					<div class="card-deck">
@@ -198,8 +202,6 @@
 			</section>
 		</div>
 
-
-		<!-- Latest compiled and minified JavaScript -->
 		<script src="javascript/interaction.js"></script>
 
 	</body>
