--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			</div>
 		</nav>
 		<div class="wrapper" id="splash">
-			<section id="title-img">
+			<section id="title-img" class="before-parallax-splash">
 			</section>
 			<section id="title">
 				<div class="container">
@@ -70,7 +70,7 @@
 					<div class="row mb-4">
 						<div class="col-lg">
 							<h2 class="text-center font-weight-bold">Make Maps</h2>
-							<p class="text-center font-weight-bold">Create story maps that take your visitor on a journey through your data</p>
+							<p class="text-center">Create story maps that take your visitor on a journey through your data</p>
 						</div>
 					</div>
 					<div class="row pt-5">
@@ -112,11 +112,11 @@
 					<div class="row mb-5">
 						<div class="col-sm">
 							<h2 class="text-center font-weight-bold">Collaborate</h2>
-							<p class="text-center font-weight-bold">Invite others to participate in your project</p>
+							<p class="text-center">Invite others to participate in your project</p>
 						</div>
 					</div>
 					<div class="row pt-5">
-						<div class="col-sm">
+						<div class="col-sm pt-5">
 							<ul class="list-group">
 								<li class="list-group-item">
 									<h3>Work together</h3>
@@ -142,12 +142,12 @@
 				</div>
 			</section>
 
-			<section id="share" class="bg-white map-background-03 map-bg">
+			<section id="share" class="bg-white map-background-03 map-bg before-parallax-splash">
 				<div class="container">
 					<div class="row mb-5">
 						<div class="col-sm">
 							<h2 class="text-center font-weight-bold ">Share</h2>
-							<p class="text-center font-weight-bold">Publish your maps to a select group or to the whole world</p>
+							<p class="text-center">Publish your maps to a select group or to the whole world</p>
 						</div>
 					</div>
 					<div class="row pt-5">
@@ -175,11 +175,11 @@
 			</section>
 			<section id="get-started">
 				<div class="container text-center">
-					<h2 class="text-center text-white font-weight-bold">Get Started Now</h2>
+					<h2 class="text-center text-white">Get Started Now</h2>
 					<div class="row pt-5 pb-5">
 						<div class="col">
-							<button class="btn btn-primary">Create a Map</button>
-							<button class="btn btn-primary">Explore Maps</button>
+							<button class="btn btn-light">Create a Map</button>
+							<button class="btn btn-light">Explore Maps</button>
 						</div>
 					</div>
 					<div class="card-deck">
@@ -194,7 +194,7 @@
 					    <img class="card-img-top" src="assets/sample-projects/la-pena-detail.png" alt="Card image cap">
 					    <div class="card-body">
 					      <h5 class="card-title">Berkeley Murals</h5>
-					      <p class="card-text">Murals in Berkeley reflect demographics and community values</p>
+					      <p class="card-text">Murals in Berkeley reflect community values</p>
 					    </div>
 					  </div>
 					</div>
