--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 				<div class="container">
 					<div class="row mb-4">
 						<div class="col-lg">
-							<h2 class="text-center font-weight-bold">Think with Maps</h2>
+							<h2 class="text-center font-weight-bold">How It Works</h2>
 						</div>
 					</div>
 					<div class="row">
